--- a/TFC/src/main/resources/static/css/detalle.css
+++ b/TFC/src/main/resources/static/css/detalle.css
@@ -23,8 +23,9 @@ section {
 article {
     border: solid white 0.25vw;
     width: 80%;
-    border-radius: 15px;
-   padding-bottom: 5%;
+    border-radius: 1.5vw;
+   	padding-bottom: 5%;
+   	margin-top: 5%;
 }
 
 /* Estilos para las secciones superiores */
@@ -96,6 +97,35 @@ article {
     margin-top: 10%;
     height: 10vw;
 }
+
+.comentarios h3{
+	margin-top: 5%;
+	color: rgb(255, 0, 100);
+	font-size: 2.5vw;
+}
+
+.comentario {
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+	padding-left: 10%;
+	padding-right: 10%;
+	margin-bottom: 5%;
+}
+
+.separacion {
+    background-color: rgb(255, 0, 100);
+    border-color: rgb(255, 0, 100);
+    border-radius: 100px;
+    height: 5px;
+    opacity: 100%;
+    width: 40%;
+
+    margin-top: 5%;
+    margin-left:30%;
+}
+
+
 
 
 
