--- a/TFC/src/main/resources/templates/coches/detalle.html
+++ b/TFC/src/main/resources/templates/coches/detalle.html
@@ -106,14 +106,15 @@
 						</div>
 					</div>
         		</div>  <!--  Fin 2º Fila  -->
-        		<div class="compra"><a><button class="boton2">Comprar</button></a></div>
+        		<div class="compra"><a th:href="@{/coches/comprar/{id} (id=${c.id})}"><button class="boton2">Comprar</button></a></div>
         	</div>
         	</article>
         	<article class="comentarios">
         		<div class="row">
         		    <div class="col">
-        		        <h3>Comentarios</h3>
-        		        <div class="comentarios-list">
+                		<a class="col-2" th:href="@{/comentarios/añadir}"><button class="botonNuevoRegistro">Nuevo comentario</button></a>
+        		        <h3 class="mb-5">Comentarios</h3>
+        		        <div class="comentarios-list pt-2">
         		            <div class="comentario" th:each="comentario : ${c.comentarios}">
         		                <p class="autor" th:text="'Autor: ' + ${comentario.autor}"></p>
         		                <p class="texto" th:text="${comentario.comentario}"></p>
