--- a/TFC/src/main/resources/templates/coches/lista.html
+++ b/TFC/src/main/resources/templates/coches/lista.html
@@ -41,7 +41,7 @@
         		</div>
         		<div class="row botones d-flex justify-content-center">
         			<div class="col-4"><a th:href="@{/coches/detalle/{id} (id=${c.id})}"><button class="boton2">Detalle</button></a></div>
-        			<div class="col-4"><a><button class="boton2">Comprar</button></a></div>
+        			<div class="col-4"><a th:href="@{/coches/comprar/{id} (id=${c.id})}"><button class="boton2">Comprar</button></a></div>
         		</div>
         	</article>
         	
